microfinance/trunk/src/objects/Loan_Account__c.object
<CustomObject>
    <description>Used to track a Loan Account for a given client/group</description>
    <fields>
        <fullName>Amortized_Payment__c</fullName>
        <formula>(
Annual_Interest_Rate__c/12.0 * Loan_Amount__c * ((1+ Annual_Interest_Rate__c/12.0 ) ^ Number_of_Installments__c )
)
/
(
((1+ Annual_Interest_Rate__c/12.0 ) ^ Number_of_Installments__c ) - 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Interest_Rate__c</fullName>
        <label>Annual Interest Rate (ex. &quot;8.125&quot;)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Loan_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Installments__c</fullName>
        <formula>CASE(Loan_Product__r.Frequency_of_Installments__c,&apos;Weekly&apos;,&apos;Weekly&apos;,&apos;Biweekly&apos;,&apos;Biweekly&apos;,&apos;Monthly&apos;,&apos;Monthly&apos;,&apos;Not Defined&apos;)</formula>
        <label>Frequency of Installments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Grace Period (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Loan_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Type__c</fullName>
        <formula>CASE(Loan_Product__r.Interest_Rate_Type__c,&apos;Flat&apos;,&apos;Flat&apos;,&apos;Declining Balance&apos;,&apos;Declining Balance&apos;,&apos;Interest Only&apos;,&apos;Interest Only&apos;,&apos;Not Defined&apos;)</formula>
        <label>Interest Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_at_Disbursement__c</fullName>
        <formula>IF(NOT(ISNULL( Loan_Product__c)),IF(  Loan_Product__r.Int_Ded_Disbursement__c ,&apos;Yes&apos;,&apos;No&apos;),&apos;Not Defined&apos;)</formula>
        <label>Interest Deducted at Disbursement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Cycle_Counter__c</fullName>
        <formula>IF(NOT(ISNULL( Loan_Product__c)),IF( Loan_Product__r.Loan_Counter_Flag__c,&apos;Yes&apos;,&apos;No&apos;),&apos;Not Defined&apos;)</formula>
        <label>Include in Loan Cycle Counter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <description>Loan Product from which the Loan Account terms are derived.</description>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Installments__c</fullName>
        <formula>Loan_Product__r.Max_Installments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Interest_Rate__c</fullName>
        <formula>Loan_Product__r.Max_Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount__c</fullName>
        <formula>Loan_Product__r.Max_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Installments__c</fullName>
        <formula>Loan_Product__r.Min_Installments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Interest_Rate__c</fullName>
        <formula>Loan_Product__r.Min_Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_Loan_Amount__c</fullName>
        <formula>Loan_Product__r.Min_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <label>Outstanding Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voucher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Payment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biweekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()+7</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defaulted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Repayment_Amount__c</fullName>
        <formula>Amortized_Payment__c * Number_of_Installments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Loan Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Group__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Outstanding_Balance__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LoanApprovalQueueMedakDistrict</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Approval Queue - Medak District</label>
        <queue>Loan Approval Queue - Medak District</queue>
    </listViews>
    <listViews>
        <fullName>LoanApprovalQueuePrakasamDistrict</fullName>
        <filterScope>Queue</filterScope>
        <label>Loan Approval Queue - Prakasam District</label>
        <queue>Loan Approval Queue - Prakasam District</queue>
    </listViews>
    <nameField>
        <displayFormat>LN-{00000000}</displayFormat>
        <label>Loan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Accounts</pluralLabel>
    <recordTypes>
        <fullName>ClientLoan</fullName>
        <active>true</active>
        <description>New loan to a Client</description>
        <label>Client Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>GroupLoan</fullName>
        <active>true</active>
        <description>New loan to a Group</description>
        <label>Group Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ScheduledLoan</fullName>
        <active>true</active>
        <description>Represents a Loan Account that has been scheduled. Locks fields.</description>
        <label>Scheduled Loan</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Group_XOR_Client</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Client__c &lt;&gt; &quot;&quot;, Group__c &lt;&gt; &quot;&quot;)</errorConditionFormula>
        <errorMessage>A Loan Account may not be associated with both a Group and a Client. Please remove the association to one of these two records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Group_or_Client</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Client__c = &quot;&quot;, Group__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>You must select a Group or Client.</errorMessage>
    </validationRules>
</CustomObject>